components/test-component--mpma/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-app-ewhs
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: test-component--mpma
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-component--mpma
  namespace: e2e-test-pipelines-nbad
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-component--mpma
    weight: null
status: {}
